LaTeX - Added discussed changes yo

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -312,3 +312,9 @@
 	Url = {https://solarianprogrammer.com/2012/07/18/perlin-noise-cpp-11},
 	Bdsk-Url-1 = {https://solarianprogrammer.com/2012/07/18/perlin-noise-cpp-11}}
 
+@article{CityBoundariesPerlin,
+	Author = {{Steven Wijgerse}},
+	Journal = {University of Twente},
+	Title = {Generating realistic city boundaries using	two-dimensional Perlin noise},
+	Year = {2007}}
+
