--- a/LaTeX/introduction.tex
+++ b/LaTeX/introduction.tex
@@ -47,6 +47,7 @@ In this thesis, the possibility of procedurally generating a city with Perlin no
 	
 	\section{Objectives}
 	Generating a city using the PCG technique Perlin noise and testing the viability in games is the goal. The time to generate a city and the cities viability within games is the corner stones explored in this thesis. The creation of an implementation is necessary as to the best knowledge of the authors there exists no such solution available.
+	There exist city-part creation solutions using Perlin noise such as city boundaries creation, but no cohesive solution creating every part of the city using Perlin noise \cite{CityBoundariesPerlin}.
 	The following things need to be completed for the objective to be achieved.
 	
 	\begin{itemize}
