--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -58,11 +58,11 @@ The results from the user study and the implementation are presented here. In or
 	\end{figure}
 	
 	% viable in games?
-	The main focus of the user study is to determine if a city generated using our application would be viable in games. The user study asks the participants which (if any) of the cities they think could be used in a game. Figure \ref{fig:pie-chart-use-in-game} shows the participants answers to this question.
+	The main focus of the user study is to determine if a city generated using our application would be viable in games. The user study asks the participants which (if any) of the cities they think could be used in a game. Figure \ref{fig:pie-chart-use-in-game} shows the participants answers to this question. This result is represented as a bar chart since this question is a multiple-choice question.
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[width=0.5\textwidth]{"Images/UseInGame"}
+		\includegraphics[width=0.48\textwidth]{"Images/UseInGame"}
 		\caption{Bar chart of which cities the participants think could be used in a game.}
 		\label{fig:pie-chart-use-in-game}
 	\end{figure}
@@ -140,7 +140,8 @@ The results from the user study and the implementation are presented here. In or
 
 
 \newpage
-\section{Data collection}
+\section{Data collection \label{section:DataCollection}}
+
 	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively. The variable measured are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height.
 	
 	\begin{center}
