--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -5,12 +5,15 @@
 		The city generated with bad parameters is the most prevalent in two parts of the user study. As seen in Figure \ref{fig:pie-chart-random} the participants in the study found it the most random city. This was unexpected since the most random city is city three, the randomly generated city. It can be seen in Figure \ref{fig:pie-chart-least-natural} that this city is seen as the least natural city by a majority of the participants. There is limited evidence, but this may show that procedurally generated cities are highly dependent upon their generation parameters. As the bad parameters generated city are perceived as both the most random and the least natural city. This city is also a contender for the ugliest city, as illustrated in Figure \ref{fig:pie-chart-ugly}.
 		
 	\subsection{City 2 and 4} \label{ssec:city2-3}
-		Generated with similar parameters but different seeds these two cities should in theory be very similar. These cities were hypothesized to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that were thought to be good. Figure \ref{fig:pie-chart-use-in-game} shows that these two cities are perceived as more viable than cities one and three. This was expected, however, city five seems to be even more viable. Hence, it is possible that the generation pipeline can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticeable degree it may be the case that some aspects of the cities differ more than expected.
+		Generated with similar parameters but different seeds these two cities should in theory be very similar. Two cities with similar parameters were included to see if there is any noticeable difference between similarly generated cities. These cities were hypothesized to be the most viable to use in games since they were created using the full procedural generation pipeline with parameters that were thought to be good. Figure \ref{fig:pie-chart-use-in-game} shows that these two cities are perceived as more viable than cities one and three. This was expected, however, city five seems to be even more viable. Hence, it is possible that the generation pipeline can be improved upon. As illustrated in Figure \ref{fig:pie-chart-road-network} city four seems to have much better road network than city two. Considering that they were generated with similar parameters but the results diverge to a noticeable degree it may be the case that some aspects of the cities differ more than expected. The difference between these two cities shows that cities generated with similar parameters may be very variable in some aspects even when only small changes are made to the parameters such as changing the seed.
 	\subsection{City 3}
 		Randomly generated, this city seems to be the least viable in games along with city one according to the user study, as shown in Figure \ref{fig:pie-chart-use-in-game}. This was expected since procedurally generated content should be more viable than randomly generated content. Where city three is the most prevalent is in the repetitive cities and ugliest cities charts, illustrated in Figure \ref{fig:pie-chart-repetitive} and \ref{fig:pie-chart-ugly}. This city is perceived as the second most random city after city one as presented in Figure \ref{fig:pie-chart-random}. The results that this city looks the most repetitive to the participants is unexpected. The least coherency and most variance in buildings should be in city three as there is no districts to control the buildings nor road variables. To analyze why city three is perceived as repetitive even though it should have the most variety is out of scope for this thesis.
 	\subsection{City 5}
 		Presented in Figure \ref{fig:pie-chart-use-in-game}, city five is the most viable city for games according to the user study. This is the city with randomly generated districts but otherwise use the same pipeline as cities one, two and four. Randomly generated districts affect where the different buildings may be placed along with the block size. This may result in layouts such as a house surrounded by skyscrapers. This city was seen as the most natural city by most participants, this can be seen in Figure \ref{fig:pie-chart-natural}. The participants found this city to have the second best road network after city four as shown in Figure \ref{fig:pie-chart-road-network}. This may suggest that the participants appreciate some randomness in the city but with the parameters the districts provide the house and road generation. This further supports the idea that the pipeline used in the implementation can be improved upon as suggested in \ref{ssec:city2-3}.
-	
+	\subsection{Performance}
+		From section \ref{section:DataCollection} all the data collected can be seen. The generation time for 100 cells is faster than two milliseconds on average when generating the 10x10 cities. And when generating the 1000x1000 cities the generation of 100 cells is faster than 0.7 milliseconds on average. This may be a viable generation speed in an online setting. As games often aim for 60 frames per second which is 16 milliseconds, a speed of two milliseconds might therefore be viable. This generation speed is without optimizations and on a single computational thread. There are examples of impressive optimizations for city generation which shows that much optimization is possible \cite{InfiniteCities}.
+		The standard deviation on the biggest city is over one second, the high standard deviation may be caused by the differences between the generated cities. One city may for example have buildings in almost all cells where others might have few buildings. This cause differences in generation time.
+		
 \section{Implementation analysis}
 The implementation has a number of major limitations. In the interest of overview, a list of limitations that will be discussed is provided below.
 	
