LaTeX - Changed small things, added code snippet and fixed references.

--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -59,7 +59,9 @@
 	Author = {Rahul Sharma},
 	Date-Added = {2017-05-14 20:40:52 +0000},
 	Date-Modified = {2017-05-14 20:41:18 +0000},
-	Title = {Procedural City Generator}}
+	Title = {Procedural City Generator},
+	Year = {2016},
+	Publisher = {IEEE}}
 
 @webpage{RandCRT,
 	Author={C rand function},
@@ -104,7 +106,7 @@
 	Author = {{Chaker, Noor}},
 	Date-Added = {2017-05-10 20:52:30 +0000},
 	Date-Modified = {2017-05-10 20:53:55 +0000},
-	Journal = {?},
+	Journal = {Springer},
 	Title = {Procedural content generation in games},
 	Year = {2016}}
 
@@ -120,9 +122,9 @@
 	Author = {{Brian Cullen and Carrol O'Sullivan}},
 	Date-Added = {2017-05-10 20:49:45 +0000},
 	Date-Modified = {2017-05-10 20:58:06 +0000},
-	Journal = {?},
+	Journal = {Computer Graphics Forum},
 	Title = {A caching approach to real-time procedural generation of cities from gis data},
-	Year = {?}}
+	Year = {2014}}
 
 @article{4DCities,
 	Author = {{Basil Weber and Pascal M{\"u}ller and Peter Wonka and Markus Gross}},
@@ -130,7 +132,7 @@
 	Date-Modified = {2017-05-10 20:58:41 +0000},
 	Journal = {Computer Graphics forum},
 	Title = {Interactive Geometric Simulation of 4D Cities},
-	Year = {?}}
+	Year = {2009}}
 
 @article{PseudoInfiniteCities,
 	Author = {{Stefan Greuter, Jeremy Parker, Nigel Stewart, Geoff Leach}},
@@ -180,12 +182,11 @@
 	Title = {Inverse design of urban procedural models},
 	Year = {2012}}
 
-@online{NoMansSkyplanets,
+@misc{NoMansSkyplanets,
 	Author = {{No man's sky community}},
+	Note = {Webpage: nomanssky.gamepedia.com/Planet},
 	Title = {No man's sky planet count},
-	Url = {nomanssky.gamepedia.com/Planet},
-	Year = {2017-05-11},
-	Bdsk-Url-1 = {nomanssky.gamepedia.com/Planet}}
+	Year = {2017}}
 
 @misc{NoMansSky,
 	Author = {{Hello Games}},
@@ -193,12 +194,11 @@
 	Title = {No Man's Sky},
 	Year = {2016}}
 
-@online{BorderlandsWeapons,
+@misc{BorderlandsWeapons,
 	Author = {{Borderlands community}},
-	Title = {Weapons in Borderlands},
-	Url = {borderlands.wikia.com/wiki/Weapons},
-	Year = {2017},
-	Bdsk-Url-1 = {borderlands.wikia.com/wiki/Weapons}}
+	Note = {Webpage: borderlands.wikia.com/wiki/Weapons },
+	Title = {Weapons in Borderlands.},
+	Year = {2017}}
 
 @misc{CivilizationCompany,
 	Author = {{Firaxis Games}},
@@ -220,13 +220,12 @@
 	Title = {Spelunky},
 	Year = {2008}}
 
-@online{MinecraftSize,
+@misc{MinecraftSize,
 	Author = {{Minecraft Community}},
-	Date = {2017},
 	Date-Modified = {2017-05-11 13:05:30 +0000},
+	Note = {Webpage: http://minecraft.gamepedia.com/The\_Overworld },
 	Title = {Minecraft size of the world},
-	Url = {http://minecraft.gamepedia.com/The\_Overworld},
-	Bdsk-Url-1 = {http://minecraft.gamepedia.com/The_Overworld}}
+	Year = {2017}}
 
 @misc{Borderlands,
 	Author = {{Gearbox Software}},
@@ -243,19 +242,15 @@
 	Title = {Elite},
 	Year = {1984}}
 
-@online{SpeedTree,
+@misc{SpeedTree,
 	Author = {{SpeedTree}},
-	Date = {2017},
-	Note = {Procedural tree generation software},
-	Url = {http://www.speedtree.com},
-	Bdsk-Url-1 = {http://www.speedtree.com}}
+	Note = {Webpage: http://www.speedtree.com},
+	Title = {Procedural tree generation software.}}
 
-@online{SpeedTreeMovies,
+@misc{SpeedTreeMovies,
 	Author = {{SpeedTree}},
-	Date = {2017},
-	Title = {SpeedTree in movies},
-	Url = {http://www.speedtree.com/idv-company-profile.php},
-	Bdsk-Url-1 = {http://www.speedtree.com/idv-company-profile.php}}
+	Note = {Webpage: http://www.speedtree.com/idv-company-profile.php},
+	Title = {SpeedTree in movies.}}
 
 @inproceedings{AutonomousTimeVarying,
 	Author = {{M. Honda and K. Mizuno and Y. Fukui}},
