--- a/LaTeX/results.tex
+++ b/LaTeX/results.tex
@@ -44,15 +44,15 @@ The results from the user study and the implementation are presented here. In or
 \end{figure}
 	
 \section{User study}
-	A user study with 25 participants was conducted. The participants answered questions about images of procedurally generated cities from the implementation created. The user study aimed to measure the viability the cities have in a game.
+	A user study with 27 participants was conducted. The participants answered questions about images of procedurally generated cities from the implementation created. The user study aimed to measure the viability the cities have in a game.
 	
 	% how often do you play?
 	\par
-	The participants of the user study is divided into three groups: \textit{avid gamers}, \textit{occasional gamers} and \textit{non-gamers}. By dividing the participants into levels of familiarity with games, a stronger case can be made for the validity of their answers. Figure \ref{fig:pie-chart-often-play} shows that most participants play at least once a week, putting them in the group of \textit{avid gamers}. Not enough participants fell into the group of \textit{occasional} or \textit{non-gamers}. Their results have been discarded.
+	The participants of the user study is divided into three groups: \textit{avid gamers}, \textit{occasional gamers} and \textit{non-gamers}. By dividing the participants into levels of familiarity with games, a stronger case can be made for the validity of their answers. Figure \ref{fig:pie-chart-often-play} shows that most participants play at least once a week, putting them in the group of \textit{avid gamers}. Not enough participants fell into the group of \textit{occasional} or \textit{non-gamers}. Their results have been discarded, which leaves 25 participants in the \textit{avid gamers} group.
 	
 	\begin{figure}[h]
 		\centering
-		\includegraphics[width=0.5\textwidth]{"Images/OftenPlay"}
+		\includegraphics[width=0.45\textwidth]{"Images/OftenPlay"}
 		\caption{Pie chart of how often the participants play games.}
 		\label{fig:pie-chart-often-play}
 	\end{figure}
@@ -142,7 +142,8 @@ The results from the user study and the implementation are presented here. In or
 \newpage
 \section{Data collection \label{section:DataCollection}}
 
-	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively. The variable measured are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height.
+	The following data were collected generating cities using the implementation. The parameters controlling the city were all randomly set during each generation. The cities were generated 100 times for each size respectively. The data shown in the table are all the average number of the 100 samples. The generation time is measured in seconds, the size is measured in cells with a width and a height.
+	The \textit{standard deviation} is calculated using the \textit{generation time} data and is also measured in seconds.
 	
 	\begin{center}
 		\begin{tabular}{|c | c c c c|} 
