--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -106,7 +106,22 @@ To explore the procedural generation of a city, a desktop application was create
 	\end{figure}
 		
 	\subsection{Blocks}
-	After generating \textit{districts}, the roads are generated (effectively creating \textit{blocks}). The first step is to generate the main roads running through the city. Main roads always run vertically through the city, no matter what parameters are used. To figure out where the main roads should be, Perlin noise is used. By going through the cells of the map horizontally and checking if the Perlin noise for that cell is above a certain threshold, Elicras determines if that cell should be a main road or not. Since the main roads run through the whole city, the algorithm only goes through the first row of cells. If the algorithm determines that a cell should contain a main road, it sets the value of that cell to indicate that it now contains a main road. After generating the main roads, smaller roads are generated. This algorithm works on two levels. The first level calculates the width of the road by starting at its current position in the map and going right until it finds a main road. The next level works much the same way as the algorithm for generating the main roads, but it goes vertically instead of horizontally. When the second level reaches the bottom of the map, it goes back to the first level. The distance between two smaller roads depends on the \textit{district's} block size. Road generation is complete when the end of the map is reached. The generation of main roads and small roads are shown in Figure \ref{fig:map-main-and-small-roads}.
+	After generating \textit{districts}, the roads are generated (effectively creating \textit{blocks}). The first step is to generate the main roads running through the city. Main roads always run vertically through the city, no matter what parameters are used. To figure out where the main roads should be, Perlin noise is used (see Figure \ref{fig:main-roads-code}). By going through the cells of the map horizontally and checking if the Perlin noise for that cell is above a certain threshold, Elicras determines if that cell should be a main road or not. Since the main roads run through the whole city, the algorithm only goes through the first row of cells. If the algorithm determines that a cell should contain a main road, it sets the value of that cell to indicate that it now contains a main road. After generating the main roads, smaller roads are generated. This algorithm works on two levels. The first level calculates the width of the road by starting at its current position in the map and going right until it finds a main road. The next level works much the same way as the algorithm for generating the main roads, but it goes vertically instead of horizontally (see Figure \ref{fig:small-roads-code}). When the second level reaches the bottom of the map, it goes back to the first level. The distance between two smaller roads depends on the \textit{district's} block size. Road generation is complete when the end of the map is reached. The generation of main roads and small roads are shown in Figure \ref{fig:map-main-and-small-roads}.
+	
+	\begin{figure}[h]
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.9\linewidth]{"Images/main roads code"}
+			\caption{Psuedocode for main road generation.}
+			\label{fig:main-roads-code}
+		\end{subfigure}
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.9\linewidth]{"Images/small roads code"}
+			\caption{Psuedocode for small road generation.}
+			\label{fig:small-roads-code}
+		\end{subfigure}
+	\end{figure}
 		
 	\begin{figure}[h]
 		\begin{subfigure}{0.5\textwidth}
@@ -126,7 +141,24 @@ To explore the procedural generation of a city, a desktop application was create
 	\end{figure}
 		
 	\subsection{Buildings}
-		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{building} or leave the cell vacant. If a \textit{buildings} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top sections. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one. The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map. In Figure \ref{fig:map-grass} the city can be seen when all generation stages are done. The numbers 0-2 represent what district the buildings there are from, 8-9 are small and big roads and 7 represents the vacant cells.
+		The final stage of the generation process it the generation of \textit{buildings}. At this point the map contains values that indicate whether a cell is a road or a vacant slot belonging to a \textit{district}. This stage goes through the whole map, skipping over any roads. For each cell that the algorithm visits, three of the \textit{districts} parameters are considered: minimum height, maximum height and density. The algorithm retrieves a Perlin noise value for the cell and compares it against the density threshold to determine whether to place a \textit{building} or leave the cell vacant (see Figure \ref{fig:vacant-code}). If a \textit{building} is placed, the algorithm uses Perlin noise to choose a bottom, middle and top section. It chooses these sections from the list of available sections that belong to the \textit{district}. Since the result of Perlin noise is a value between zero and one, it is easy to multiply this result with the number of available sections in order to choose one (see Figure \ref{fig:section-code}).
+		
+	\begin{figure}
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.95\linewidth]{"Images/vacant code"}
+			\caption{Psuedocode for main road generation.}
+			\label{fig:vacant-code}
+		\end{subfigure}
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.95\linewidth]{"Images/section code"}
+			\caption{Psuedocode for small road generation.}
+			\label{fig:section-code}
+		\end{subfigure}
+	\end{figure}
+		
+		The final step of the algorithm determines the height of the \textit{buildings} by multiplying the difference between the maximum height and the minimum height with the result from the Perlin noise and then adding the minimum height. The results of the \textit{buildings} generation is not stored in the map, but in a separate list of building sections that can later be rendered. The placement of vacant tiles is stored in the map. In Figure \ref{fig:map-grass} the city can be seen when all generation stages are done. The numbers 0-2 represent what district the buildings there are from, 8-9 are small and big roads and 7 represents the vacant cells.
 		
 	\begin{figure}
 		\centering
