LaTeX - tiny fix

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -158,7 +158,7 @@ To explore the procedural generation of a city, a desktop application was create
 			\caption{pseudocode for building generation.}
 			\label{fig:section-code}
 		\end{subfigure}
-			\caption{pseudocode for road generation.}
+			\caption{pseudocode for building placement and generation.}
 			\label{fig:pseudo-code-buildings}
 	\end{figure}
 		
